RESOLVED FIXED225208
REGRESSION (r275431): [iOS] fast/events/touch/ios/mouse-events-dispatch-with-touch.html is timing out
https://bugs.webkit.org/show_bug.cgi?id=225208
Summary REGRESSION (r275431): [iOS] fast/events/touch/ios/mouse-events-dispatch-with-...
Aditya Keerthi
Reported 2021-04-29 13:47:42 PDT
...
Attachments
Patch (1.58 KB, patch)
2021-04-29 14:01 PDT, Aditya Keerthi
no flags
Patch for landing (2.00 KB, patch)
2021-04-29 14:28 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-04-29 13:48:02 PDT
Aditya Keerthi
Comment 2 2021-04-29 14:01:59 PDT
Devin Rousso
Comment 3 2021-04-29 14:09:46 PDT
Comment on attachment 427374 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=427374&action=review r=me > Source/WebCore/ChangeLog:13 > + Remove the `!needsQuirks()` check added in r275431 to restore the > + original test behavior. Might be worth expanding on this a bit more by saying that the test overrides `MouseEventsSimulationEnabled` which is the first thing checked _before_ `needsQuirks()` inside `Quirks::shouldDispatchSimulatedMouseEvents` (and I could be wrong on this part, but also that `NeedsSiteSpecificQuirks` defaults to `false` in WebCore).
Aditya Keerthi
Comment 4 2021-04-29 14:28:31 PDT
Created attachment 427375 [details] Patch for landing
EWS
Comment 5 2021-04-29 14:56:14 PDT
Committed r276803 (237171@main): <https://commits.webkit.org/237171@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 427375 [details].
Note You need to log in before you can comment on or make changes to this bug.